work on validate

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 /DatabaseManagement/world.tif
+/DatabaseManagement/world.png
