sucessfully upload image sections to unity

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 /DatabaseManagement/world.tif
 /DatabaseManagement/world.png
+/DatabaseManagement/admin.json
